# snow-bros

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
assets/Fonts/: guide.txt
data/: leaderboard.txt  progress.txt  users.txt
include/DB/: Data_base.h  Leaderboard_data.h  Progress_data.h  User_data.h  database_GUIDE.txt
include/UI/: Character_Selectn.h  GameOverScreen.h  LeaderboardScreen.h  LoginScreen.h  PauseMenuScreen.h  Screen.h  ShopScreen.h  StarScreen.h  currencyFall.h  ui_GUIDE.txt
include/auth/: Authentication_Manager.h  Session_holder.h  auth_GUIDE.txt
include/characters/: HitBox.h  character_GUIDE.txt  character_base.h
include/characters/enemy/: Boss.h  Botom.h  Enemy.h  FlyngFoogaFoog.h  enemies_GUIDE.txt
include/characters/player/: Player.h  player_GUIDE.txt
include/characters/powerup/: PowerUp.h  powerups_GUIDE.txt
include/characters/projectile/: Projectile.h  Snowball.h  projectiles_GUIDE.txt
include/factory/: factories_GUIDE.txt
include/levels/: Level_Maker.h  dimensioner.h  levels_GUIDE.txt
include/main/: Collision_detector.h  Game_state.h  Input_manager.h  core_GUIDE.txt  game.h  gameLoop.h
include/systems/: GemSystem.h  ScoreSystem.h  systems_GUIDE.txt
src/: Character.cpp  login_test.cpp  main.cpp  register_test.cpp  test_database.cpp
src/DB/: Data_base.cpp  Leaderboard_data.cpp  Progress_data.cpp  User_data.cpp
src/UI/: Character_Selectn.cpp  GameOverScreen.cpp  GameScreen.cpp  GameUI.cpp  LeaderboardScreen.cpp  LevelCompleteScreen.cpp  LoginScreen.cpp  MainMenuScreen.cpp  PauseMenuScreen.cpp  Screen.cpp  ShopScreen.cpp  StarScreen.cpp  currencyFall.cpp  main_interface.cpp
src/auth/: Authentication_Manager.cpp  Session_holder.cpp
src/characters/: HitBox.cpp  character_base.cpp
src/characters/enemy/: Boss.cpp  Botom.cpp  Enemy.cpp  FlyingEnemy.cpp  FlyngFoogaFoog.cpp  Gamakichi.cpp  Mogera.cpp  MogeraChild.cpp  Tornado.cpp
src/characters/player/: Player.cpp  Snowball.cpp  Stats.cpp
src/characters/powerup/: BalloonMod.cpp  DistanceIncrease.cpp  ExtraLife.cpp  PowerUp.cpp  SnowballPower.cpp  SpeedBoost.cpp
src/characters/projectile/: ArtilleryRocket.cpp  Knife.cpp  Projectile.cpp  Snowball.cpp
src/factory/: EnemyFactory.cpp
src/levels/: Level_Maker.cpp  Level_organizer.cpp  dimensioner.cpp
src/main/: Collision_detector.cpp  Game_state.cpp  Input_manager.cpp  game.cpp  gameLoop.cpp
src/systems/: EventBus.cpp  GemSystem.cpp  LeaderboardSystem.cpp  ScoreSystem.cpp  ShopSystem.cpp
tests/: Character.cpp  register_test.cpp  test_database.cpp
